--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
   <!-- navigation section -->
-  <nav class="navbar navbar-expand-lg fixed-top nav-section bg-primary " id="mainNav">
+  <nav class="navbar navbar-expand-lg fixed-top nav-section bg-warning " id="mainNav">
     <div class="container-fluid nav-section ">
-      <a class="navbar-brand m-2 text-white logo-bar" href="#">Bootstrap-Portfolio</a>
-      <button class="navbar-toggler navbar-toggler-right bg-success" type="button" data-bs-toggle="collapse"
+      <a class="navbar-brand m-2 text-white logo-bar" href="#">Jeylan-Bootstrap-Portfolio</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
         Menu
@@ -22,10 +22,13 @@
       <div class="collapse navbar-collapse " id="navbarResponsive">
         <ul class="navbar-nav ml-auto m-6">
           <li class="nav-item">
-            <a class="nav-link" href="#download">Download</a>
+            <a class="nav-link" href="#download">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#features">Features</a>
+            <a class="nav-link" href="#Work">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Skill</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
@@ -36,10 +39,76 @@
   </nav>
 
   <!-- hero section -->
-   <section class="hero">
-     
-   </section>
-    
+  <header class="">
+        <section class="hero">
+        <!-- Jumbotron Code -->
+          <div class="p-5 mb-4 bg-body-tertiary rounded-3 head-1">
+            <div class="container  py-5">
+                  <div class="profile-image">
+                    <img class=" profile-pic mx-auto d-block p-5 img-fluid" src="/images/testimonials-2.jpg" alt="">
+                  </div>
+                  <div class="description ">
+                      <h1 class="display-5 fw-bold text-center">Jeylan.A Tesi</h1>
+                      <p class=" p-3 fw-bold"> Hey there! I'm Jeylan, a frontend web wizard on a mission to create awesome digital experiences. With a flair for design and a knack for coding (HTML, CSS, and JavaScript are my playground), I bring websites to life with style and functionality. I'm all about making user-friendly, eye-catching interfaces that leave a lasting impression. Let's build something amazing together! </p>
+                  </div>
+            </div>
+          </div>
+        </section>
+  </header>
+
+  <!-- work section -->
+  <section class="work" id="Work">
+    <div class="container text-center">
+  <!-- row 1 -->
+      <div class="row m-5">
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <!-- card-1 -->
+          <div class="card m-2" >
+            <img src="/images/personal-portfolio.png" class="card-img-top img-fluid" alt="...">
+            <div class="card-body bg-warning">
+              <h3>Personal-Portfolio</h3>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <!-- card-2 -->
+          <div class="card m-2">
+            <img src="/images/01-html-css-git-challenge-demo.png" class="card-img-top img-fluid" alt="...">
+            <div class="card-body bg-warning">
+              <h3>Horiseon-Social-Solution</h3>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+  <!-- row-2 -->
+      <div class="row m-5">
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <!-- card-3 -->
+          <div class="card m-3 ">
+            <img src="/images/coming-soon-2.jpg" class="card-img-top img-fluid " alt="...">
+            <div class="card-body bg-warning">
+              <h3>Coming Soon</h3>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6 ">
+          <!-- card-4 -->
+          <div class="card m-3">
+            <img src="/images/coming-soon-1.jpg" class="card-img-top img-fluid " alt="...">
+            <div class="card-body bg-warning">
+              <h3>Coming Soon</h3>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>   
+  
+  
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
