added hero section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse " id="navbarResponsive">
         <ul class="navbar-nav ml-auto m-6">
           <li class="nav-item">
-            <a class="nav-link" href="#Home">Home</a>
+            <a class="nav-link" href="#hero">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#Work">Work</a>
@@ -41,8 +41,8 @@
   </nav>
 
   <!-- hero section -->
-  <header class="">
-        <section class="hero">
+  <header>
+        <section class="hero" id="hero">
         <!-- Jumbotron Code -->
           <div class="p-5 mb-4 bg-body-tertiary rounded-3 head-1">
             <div class="container  py-5">
