work section of the webpage added

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <!-- card-1 -->
           <div class="card m-5" >
             <a href="https://jeylanab.github.io/Personal-Portfolio-Website/">
-            <img src="/images/personal-portfolio.png" class="card-img-top img-fluid" alt="...">
+            <img src="./images/personal-portfolio.png" class="card-img-top img-fluid" alt="...">
 
             </a> 
             <div class="card-body bg-warning">
@@ -84,7 +84,7 @@
           <!-- card-2 -->
           <div class="card m-5">
             <a href="https://jeylanab.github.io/Horiseon-Social-Solution-project/">
-            <img src="/images/01-html-css-git-challenge-demo.png" class="card-img-top img-fluid" alt="...">
+            <img src="./images/01-html-css-git-challenge-demo.png" class="card-img-top img-fluid" alt="...">
 
             </a>
             <div class="card-body bg-warning">
@@ -99,7 +99,7 @@
         <div class="col-sm-12 col-md-6 col-lg-6">
           <!-- card-3 -->
           <div class="card m-5 ">
-            <img src="/images/coming-soon-2.jpg" class="card-img-top img-fluid " alt="...">
+            <img src="./images/coming-soon-2.jpg" class="card-img-top img-fluid " alt="...">
             <div class="card-body bg-warning">
               <h3>Coming Soon</h3>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -109,7 +109,7 @@
         <div class="col-sm-12 col-md-6 col-lg-6 ">
           <!-- card-4 -->
           <div class="card m-5">
-            <img src="/images/coming-soon-1.jpg" class="card-img-top img-fluid " alt="...">
+            <img src="./images/coming-soon-1.jpg" class="card-img-top img-fluid " alt="...">
             <div class="card-body bg-warning">
               <h3>Coming Soon</h3>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -135,7 +135,7 @@
             <div class="card-body bg-success">
               <h4 class="card-text text-warning">HTML5</h4>
             </div>
-            <img src="/images/html.png" class="card-img-bottom p-5 img-stretch" alt="...">
+            <img src="./images/html.png" class="card-img-bottom p-5 img-stretch" alt="...">
           </div>
         </div>
 
@@ -145,7 +145,7 @@
             <div class="card-body bg-success">
               <h4 class="card-text text-warning">CSS3</h4>
             </div>
-            <img src="/images/css.png" class="card-img-bottom p-5 img-fluid" alt="...">
+            <img src="./images/css.png" class="card-img-bottom p-5 img-fluid" alt="...">
           </div>
         </div>
 
@@ -155,7 +155,7 @@
             <div class="card-body bg-success">
               <h4 class="card-text text-warning">JavaScript</h4>
             </div>
-            <img src="/images/jSC.jpeg" class="card-img-bottom p-5 img-fluid" alt="...">
+            <img src="./images/jSC.jpeg" class="card-img-bottom p-5 img-fluid" alt="...">
           </div>
         </div>
       </div>
@@ -169,7 +169,7 @@
             <div class="card-body bg-success">
               <h4 class="card-text text-warning">React</h4>
             </div>
-            <img src="/images/REACT.png" class="card-img-bottom p-5 img-fluid" alt="...">
+            <img src="./images/REACT.png" class="card-img-bottom p-5 img-fluid" alt="...">
           </div>
         </div>
 
@@ -179,7 +179,7 @@
             <div class="card-body bg-success">
               <h4 class="card-text text-warning">Node.Js</h4>
             </div>
-            <img src="/images/ACCL-NodeJS.png" class="card-img-bottom p-5 img-fluid" alt="...">
+            <img src="./images/ACCL-NodeJS.png" class="card-img-bottom p-5 img-fluid" alt="...">
           </div>
         </div>
 
@@ -189,7 +189,7 @@
             <div class="card-body bg-success">
               <h4 class="card-text text-warning">JQuery</h4>
             </div>
-            <img src="/images/jquery_original_wordmark_logo_icon_146447.png" class="card-img-bottom p-5 img-fluid" alt="...">
+            <img src="./images/jquery_original_wordmark_logo_icon_146447.png" class="card-img-bottom p-5 img-fluid" alt="...">
           </div>
         </div>
       </div>
@@ -203,7 +203,7 @@
             <div class="card-body bg-success">
               <h4 class="card-text text-warning">React</h4>
             </div>
-            <img src="/images/REACT.png" class="card-img-bottom p-5 img-fluid" alt="...">
+            <img src="./images/REACT.png" class="card-img-bottom p-5 img-fluid" alt="...">
           </div>
         </div>
 
@@ -213,7 +213,7 @@
             <div class="card-body bg-success">
               <h4 class="card-text text-warning">Node.Js</h4>
             </div>
-            <img src="/images/ACCL-NodeJS.png" class="card-img-bottom p-5 img-fluid" alt="...">
+            <img src="./images/ACCL-NodeJS.png" class="card-img-bottom p-5 img-fluid" alt="...">
           </div>
         </div>
 
@@ -223,7 +223,7 @@
             <div class="card-body bg-success">
               <h4 class="card-text text-warning">JQuery</h4>
             </div>
-            <img src="/images/jquery_original_wordmark_logo_icon_146447.png" class="card-img-bottom p-5 img-fluid" alt="...">
+            <img src="./images/jquery_original_wordmark_logo_icon_146447.png" class="card-img-bottom p-5 img-fluid" alt="...">
           </div>
         </div>
        
@@ -242,16 +242,16 @@
       <!-- row-1 -->
       <div class="row m-5">
         <div class="col-sm-6 col-md-3 col-lg-3">
-          <a href=" https://github.com/jeylanab/" target="_blank">  <img src="/images/github_PNG84.png" alt="github"> <p class="social-network">Github</p></a>
+          <a href=" https://github.com/jeylanab/" target="_blank">  <img src="./images/github_PNG84.png" alt="github"> <p class="social-network">Github</p></a>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3">
-         <a href="https://linkedin.com/in/jeylan-tesi-53a746257" target="_blank"> <img src="/images/linkedin-icon-logo-png-transparent.png" alt="linkedin"> <p class="social-network">Linkedin</p></a>
+         <a href="https://linkedin.com/in/jeylan-tesi-53a746257" target="_blank"> <img src="./images/linkedin-icon-logo-png-transparent.png" alt="linkedin"> <p class="social-network">Linkedin</p></a>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3">
-         <a href="https://joephoenix755@gmail.com "> <img src="/images/email.png" alt="email"> <p class="social-network">Email</p></a>
+         <a href="https://joephoenix755@gmail.com "> <img src="./images/email.png" alt="email"> <p class="social-network">Email</p></a>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3">
-          <a href="https://t.me/jetu81"> <img src="/images/tele.png" alt="telegram"> <p class="social-network">Telegram</p></a>
+          <a href="https://t.me/jetu81"> <img src="./images/tele.png" alt="telegram"> <p class="social-network">Telegram</p></a>
         </div>
 
       </div>
