added skill section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="p-5 mb-4 bg-body-tertiary rounded-3 head-1">
             <div class="container  py-5">
                   <div class="profile-image">
-                    <img class=" profile-pic mx-auto d-block p-5 img-fluid" src="/images/testimonials-2.jpg" alt="">
+                    <img class=" profile-pic mx-auto d-block p-5 img-fluid" src="./images/testimonials-2.jpg" alt="">
                   </div>
                   <div class="description ">
                       <h1 class="display-5 fw-bold text-center">Jeylan.A Tesi</h1>
