added feature of projects

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
   </nav>
 
   <!-- hero section -->
-  <header>
-        <section class="hero" id="hero">
+  <header class="bg-success">
+        <section class="hero " id="hero">
         <!-- Jumbotron Code -->
-          <div class="p-5 mb-4 bg-body-tertiary rounded-3 head-1">
+          <div class="p-5 mb-4 bg-body-tertiary rounded-3  head-1">
             <div class="container  py-5">
                   <div class="profile-image">
                     <img class=" profile-pic mx-auto d-block p-5 img-fluid" src="./images/testimonials-2.jpg" alt="">
@@ -60,16 +60,16 @@
 
   <!-- work section -->
   <section class="work" id="Work">
-    <div class=" bg-black p-5">
+    <div class=" bg-black p-2">
        <h3 class="text-center text-warning ">PROJECTS I CREATED SO FAR</h3> 
        <i class='fa fa-rocket' style='color: #f3da35'>
     </div>
-    <div class="container text-center p-3">
+    <div class="container text-center p-2">
   <!-- row 1 -->
-      <div class="row m-5">
+      <div class="row m-2 mt-4">
         <div class="col-sm-12 col-md-6 col-lg-6">
           <!-- card-1 -->
-          <div class="card m-5" >
+          <div class="card m-2" >
             <a href="https://jeylanab.github.io/Personal-Portfolio-Website/">
             <img src="./images/personal-portfolio.png" class="card-img-top img-fluid" alt="...">
 
@@ -82,7 +82,7 @@
         </div>
         <div class="col-sm-12 col-md-6 col-lg-6">
           <!-- card-2 -->
-          <div class="card m-5">
+          <div class="card m-2">
             <a href="https://jeylanab.github.io/Horiseon-Social-Solution-project/">
             <img src="./images/01-html-css-git-challenge-demo.png" class="card-img-top img-fluid" alt="...">
 
@@ -95,10 +95,10 @@
         </div>
       </div>
   <!-- row-2 -->
-      <div class="row m-5">
+      <div class="row m-2">
         <div class="col-sm-12 col-md-6 col-lg-6">
           <!-- card-3 -->
-          <div class="card m-5 ">
+          <div class="card m-2 ">
             <img src="./images/coming-soon-2.jpg" class="card-img-top img-fluid " alt="...">
             <div class="card-body bg-warning">
               <h3>Coming Soon</h3>
@@ -108,7 +108,7 @@
         </div>
         <div class="col-sm-12 col-md-6 col-lg-6 ">
           <!-- card-4 -->
-          <div class="card m-5">
+          <div class="card m-2">
             <img src="./images/coming-soon-1.jpg" class="card-img-top img-fluid " alt="...">
             <div class="card-body bg-warning">
               <h3>Coming Soon</h3>
