added feature of bootstrap class

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   <!-- work section -->
   <section class="work" id="Work">
-    <div class=" bg-black p-2">
+    <div class=" bg-black p-5">
        <h3 class="text-center text-warning ">PROJECTS I CREATED SO FAR</h3> 
        <i class='fa fa-rocket' style='color: #f3da35'>
     </div>
@@ -122,7 +122,7 @@
   <!-- skill section -->
   <section class="skill" id="skill">
      <div class="">
-        <h3 class="bg-black p-5 text-center skill">Skills</h3>
+        <h3 class="bg-black p-5 text-center skill-text">Skills</h3>
     </div>
 
     <div class="container text-center">
@@ -260,8 +260,8 @@
   </section>
 
   <!-- footer section -->
-  <footer class="footer">
-     <p class="text-center p-5 bg-success">@2023 December 18</p>
+  <footer class="footer mb-0">
+     <p class="text-center p-5 bg-success">@2023 December 18 Power By -Jeylan Ab</p>
   </footer>
 
   
