added feature for hover on skill card

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
   <!-- work section -->
   <section class="work" id="Work">
-    <div class=" bg-black p-5">
-       <h3 class="text-center text-warning ">PROJECTS I CREATED SO FAR</h3> 
+    <div class=" bg-black p-5 bg-radius">
+       <h3 class="text-center text-warning  ">PROJECTS I CREATED SO FAR</h3> 
        <i class='fa fa-rocket' style='color: #f3da35'>
     </div>
     <div class="container text-center p-2">
@@ -122,12 +122,12 @@
   <!-- skill section -->
   <section class="skill" id="skill">
      <div class="">
-        <h3 class="bg-black p-5 text-center skill-text">Skills</h3>
+        <h3 class="bg-black p-5 text-center skill-text bg-radius">Skills</h3>
     </div>
 
     <div class="container text-center">
       <!-- row -1  -->
-      <div class="row m-5 ">
+      <div class="row m-5 work-h ">
 
         <!-- col-1 -->
         <div class="col-sm-12 col-md-6 col-lg-4">
@@ -235,8 +235,8 @@
 
   <!-- Contact section --> 
   <section class="contact" id="contact">
-    <div class="contact-me bg-secondary">
-        <h4 class="text-center p-5">Contact Me On:</h4>
+    <div class="contact-me">
+        <h4 class="text-center bg-black p-5 bg-radius">Contact Me On:</h4>
     </div>
     <div class="container text-center">
       <!-- row-1 -->
