added feature for footer

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <img class=" profile-pic mx-auto d-block p-5 img-fluid" src="./images/testimonials-2.jpg" alt="">
                   </div>
                   <div class="description ">
-                      <h1 class="display-5 fw-bold text-center">Jeylan.A Tesi</h1>
+                      <h1 class="display-5 fw-bold text-center">Jeylan A Tesi</h1>
                       <p class=" p-3 fw-bold"> Hey there! I'm Jeylan, a frontend web wizard on a mission to create awesome digital experiences. With a flair for design and a knack for coding (HTML, CSS, and JavaScript are my playground), I bring websites to life with style and functionality. I'm all about making user-friendly, eye-catching interfaces that leave a lasting impression. Let's build something amazing together! </p>
                   </div>
             </div>
